fix space in accordeon/collapse group

--- a/source/assets/stylesheets/locastyle/modules/_collapse.sass
+++ b/source/assets/stylesheets/locastyle/modules/_collapse.sass
@@ -1,4 +1,14 @@
-// .ls-collapse-group
+.ls-collapse-group
+  .ls-collapse
+    margin-bottom: 0
+    border-bottom: 0
+    border-radius: 0
+    &:first-child
+      +border-top-radius(3px)
+    &:last-child
+      +border-bottom-radius(3px)
+      border: 1px solid $gray-2
+
 
 .ls-collapse
   border: 1px solid $gray-2
